--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,7 +297,8 @@ a:hover{
     padding: 5px 10px 5px 30px;
 }
 .s-form .s-dropdown-group .s-choices ul li a:hover{
-    color: #111;
+    color: #000;
+    font-weight: 500;
     text-decoration: none;
 }
 .s-form .s-dropdown-group .s-choices ul li:hover{
